UI fix content hiding behind sticky footer

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   top: 18%;
   width: 100%;
   margin: auto;
+  margin-bottom: 100px;
 }
 
 .app-log-overlay {
@@ -84,21 +85,13 @@
 
 html,
 
-@media screen and (max-width: 375px) {
-    body {
-      background-color: blue;
-    }
-  }
 
 body {
-  margin: 0;
-  padding: 0;
-margin-bottom:150px; 
+  margin: auto; 
+  padding: 0 ;
   background-image: linear-gradient(rgb(236, 236, 236), rgb(255, 255, 255),  white, white, white, white, white,white, rgb(255, 255, 255),  rgb(255, 255, 255), rgb(236, 236, 236), rgb(236, 236, 236));
   background-repeat: no-repeat;
   background-attachment: fixed;
-  width: 100%;
-  height: 100%;
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
@@ -133,6 +126,7 @@ h1 {
     bottom: 0px;
     width: 100%;
     padding: 0px;
+    margin-top: 100px;
 }
 
 .chart {
